// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattingAPIControl tests Destroy should work 1`] = `
<body>
  <div>
    <div
      class="Formatting_Container"
    >
      <table
        class="FormattingControlSampleHtmlTable_HtmlTable"
      >
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            Example Method
          </th>
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            Result
          </th>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatCurrency()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            $0.00
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDecimal()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            0
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatInteger()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            0
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatLanguage()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            1033
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDateYearMonth()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            September 2022
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            getWeekOfYear()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            37
          </td>
        </tr>
      </table>
    </div>
  </div>
</body>
`;

exports[`FormattingAPIControl tests Init should work 1`] = `
<body>
  <div>
    <div
      class="Formatting_Container"
    />
  </div>
</body>
`;

exports[`FormattingAPIControl tests Update View should Work 1`] = `
<body>
  <div>
    <div
      class="Formatting_Container"
    >
      <table
        class="FormattingControlSampleHtmlTable_HtmlTable"
      >
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            Example Method
          </th>
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            Result
          </th>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatCurrency()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            $1,000.01
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDecimal()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            123.45
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatInteger()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            987
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatLanguage()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            1033
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDateYearMonth()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            September 2022
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            getWeekOfYear()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            35
          </td>
        </tr>
      </table>
    </div>
  </div>
</body>
`;

exports[`FormattingAPIControl tests getOuputs should work 1`] = `
<body>
  <div>
    <div
      class="Formatting_Container"
    >
      <table
        class="FormattingControlSampleHtmlTable_HtmlTable"
      >
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            Example Method
          </th>
          <th
            class="FormattingControlSampleHtmlTable_HtmlHeaderCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            Result
          </th>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatCurrency()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            $0.00
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDecimal()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            0
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatInteger()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            0
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatLanguage()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            1033
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            formatDateYearMonth()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            September 2022
          </td>
        </tr>
        <tr
          class="FormattingControlSampleHtmlTable_HtmlRow"
        >
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Key"
          >
            getWeekOfYear()
          </td>
          <td
            class="FormattingControlSampleHtmlTable_HtmlCell FormattingControlSampleHtmlTable_HtmlCell_Value"
          >
            37
          </td>
        </tr>
      </table>
    </div>
  </div>
</body>
`;
